Remove with Button and add font size 2rem large button; Remove gap carousel; Fix css UserPage; Refacto handlePurchase now delete item in cart

--- a/frontend/src/components/Button/Button.scss
+++ b/frontend/src/components/Button/Button.scss
@@ -32,7 +32,6 @@
 
   &--small {
     @extend .btn_size;
-    // width: 30%;
   }
 
   &--medium {
@@ -42,7 +41,7 @@
 
   &--large {
     @extend .btn_size;
-    width: 70%;
-    padding: 8px 20px;
+    font-size: 2rem;
+    padding: 8px 40px;
   }
 }
