--- a/frontend/src/components/MediaCardList/MediaCardList.scss
+++ b/frontend/src/components/MediaCardList/MediaCardList.scss
@@ -5,6 +5,7 @@
 
 .react-multi-carousel-track {
   height: 100%;
+  gap: 0;
 }
 
 .carousel-item {
