--- a/frontend/src/components/TabBar/TabBar.scss
+++ b/frontend/src/components/TabBar/TabBar.scss
@@ -6,7 +6,7 @@
   border-top: 1px solid $main--medium;
   width: 100%;
   height: auto;
-  position: sticky;
+  position: absolute;
   bottom: 0;
   left: 0;
   backdrop-filter: blur(5px);
