--- a/frontend/src/components/TabUser/TabUser.scss
+++ b/frontend/src/components/TabUser/TabUser.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 88%;
+  height: 100%;
   align-items: center;
 }
 
@@ -98,7 +98,7 @@
   // tabs on right side
   .tab_user__globalComponent {
     margin-top: 0;
-    width: 95%;
+    width: 90%;
     height: 85%;
     align-self: end;
 
@@ -141,7 +141,7 @@
   .tab_user__globalComponent {
     width: 85%;
     align-self: center;
-    height: 85%;
+    height: 100%;
     .tab_user__container {
       flex-direction: column-reverse;
       height: 90%;
