--- a/frontend/src/pages/UserPage/UserPage.scss
+++ b/frontend/src/pages/UserPage/UserPage.scss
@@ -1,22 +1,22 @@
 @import "../../theme.scss";
 
-.userPage__container {
+.userPage {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: space-between;
   height: 100%;
   width: 100%;
-}
 
-.user-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 1.5rem;
-  height: 100%;
-  width: 100%;
-  padding-top: 2rem;
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 1.5rem;
+    height: 85%;
+    width: 100%;
+    padding-top: 1.5rem;
+  }
 }
 
 .userPage__userId {
@@ -37,7 +37,7 @@ h1 {
 }
 
 @media (min-width: 768px) {
-  .userPage__container {
+  .userPage {
     flex-direction: row-reverse;
   }
 
@@ -70,8 +70,12 @@ h1 {
 }
 
 @media (min-width: 1440px) {
-  .userPage__container {
+  .userPage {
     flex-direction: column-reverse;
+  }
+
+  .userPage__container {
+    height: 90%;
   }
 
   .userPage__userId {
